Enhancing query process and metadata tools based on execution results